--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "require": {
         "pear/pear": "1.10.4",
-        "phpmailer/phpmailer": "6.0",
+        "phpmailer/phpmailer": "v5.2.6",
+		"adodb/adodb-php": "v5.20.9",
+		"eternicode/bootstrap-datepicker": "v1.5.0-RC1",
+		"michelf/php-markdown": "1.4.1",
         "zendframework/zendframework": "2"
     }
 }
